# TrendingFounder

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  check_progress.py  crawl  main.py  nohup.out  nvidia-proxy.js  opencode.json  package-lock.json  pyproject.toml  requirements.txt  run_scoring.sh  start  start-git-crawl  start-score
.claude/plans/: optimize-collected-data-performance.md
.gemini/: settings.json
.github/workflows/: crawl.yml  schedule-probe.yml
.impeccable/: design.json
.streamlit/: config.toml  secrets.toml.example
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
app/: data_loader.py  streamlit_app.py
app/components/: comments_dialog.py  domain_table.py  filters.py  metrics_cards.py
app/pages/: 1_Today.py  2_This_Week.py  3_Stats.py
docs/: AGENTS.md  API_CONTRACTS.md  APP_ANALYSIS_2026-05-18.md  Architecture.md  CHANGELOG.md  DECISIONS.md  Github_page_plan.md  PLAN.md  PROMPTS.md  RUNBOOK.md  TASKS.md  Update_scoring.md  streamlit-secrets.toml.example
nvidia-proxy/: index.js
src/: cli.py
tests/: test_bulk_upsert.py  test_cloudflare_client.py  test_cloudflare_radar_service.py  test_cloudflare_schemas.py  test_constants.py  test_crawler.py  test_data_loader.py  test_db_repositories.py  test_domain_dedupe.py  test_domain_normalize.py  test_github_actions_integration.py  test_github_discovery.py  test_llm_enrichment.py  test_llm_prompts.py  test_llm_schemas.py  test_scoring.py  test_settings.py  test_supabase_schema.py  test_ui_metrics.py
(+53 files in other folders)
