[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trendingfounder"
version = "0.1.0"
description = "Discover trending domains globally via Cloudflare Radar, deduplicate, enrich with LLM, and triage in a Streamlit dashboard."
requires-python = ">=3.14"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.0",
    "loguru>=0.7.0",
    "supabase>=2.30.0",
    "streamlit>=1.57.0",
    "tldextract>=5.3.0",
    "tenacity>=9.1.0",
    "pytz>=2024.1",
    "beautifulsoup4>=4.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
    "black>=26.3.0",
]

[project.scripts]
start = "src.cli:start"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"app/pages/*.py" = ["N999"]

[tool.black]
line-length = 120
target-version = ["py314"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
